--- a/assets/scss/components/charts/_charts.scss
+++ b/assets/scss/components/charts/_charts.scss
@@ -1,6 +1,6 @@
 .nodes-map-chart {
   width: 100%;
-  height: 500px;
+  height: 590px;
 }
 
 .node-provider-chart {
@@ -8,7 +8,7 @@
   height: 350px;
 }
 
-.relayed-messages-chart{
+.relayed-messages-chart {
   width: 100%;
   height: 150px;
 }
